Disable auto-refresh

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             }
         }
 
-        setInterval(loadData, 10000);
+        //setInterval(loadData, 10000);
         loadData();
     </script>
 
